# online-mart-backend

./: README.md  compose-user.yaml  compose.yaml
inventory-management/: Dockerfile  pyproject.toml
inventory-management/inventory_management/: main.py
notification-service/: Dockerfile  bac.env  pyproject.toml
notification-service/notification_service/: main.py  settings.py
order-service/: Dockerfile  pyproject.toml
order-service/order_service/: main.py  settings.py
payment-service/: Dockerfile  bac.env  payment.html  pyproject.toml  stripe.html
payment-service/payment_service/: main.py  settings.py
product-management/: Dockerfile  bac.env  pyproject.toml
product-management/product_management/: main.py
user-management/: Dockerfile  pyproject.toml
user-management/user_management/: main.py
